# stdio

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  manual.tjs
data/: startup.tjs
